<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Considered Costs</string>

    <!-- Welcome informational screens -->
    <string name="welcomeImageDescription">"Welcome image"</string>
    <string name="welcome1Title">GET AN OVERVIEW</string>
    <string name="welcome1Text">OF INCOMES AND OUTGOES</string>
    <string name="welcome2Title">SET FINANCIAL GOALS</string>
    <string name="welcome2Text">AND ACHIEVE THEM</string>
    <string name="welcome3Title">TAKE CARE</string>
    <string name="welcome3Text">OF YOUR PROFIT</string>
    <string name="skipLinkText">SKIP</string>
    <string name="nextLinkText">NEXT</string>
    <string name="doneLinkText">DONE</string>
    <string name="startLinkText">START</string>
    <!-- SignUp screen -->
    <string name="signAlreadyHave">Already have an account?</string>
    <string name="signUpButtonText">Sign Up</string>

    <!-- SignIn screen -->
    <string name="username">Username</string>
    <string name="plsUsername">Please enter your username</string>
    <string name="email">Email</string>
    <string name="plsEmail">Please enter your email</string>
    <string name="password">Password</string>
    <string name="plsPassword">Please enter your password</string>
    <string name="confPassword">Confirm password</string>
    <string name="plsConfPassword">Please confirm your password</string>
    <string name="signInButtonText">Sign In</string>
    <string name="signDoNotHaveAccount">Don`t have an account?</string>
    <string name="considered_costs_logo">Considered Costs logo</string>

    <!-- Nav bat -->
    <string name="navBarHome">Home</string>
    <string name="navBarTransactions">Transactions</string>
    <string name="navBarItems">Items</string>
    <string name="navBarGoals">Goals</string>
    <string name="navBarElse">Else</string>

    <!-- Transactions -->
    <string name="date">Date:</string>
    <string name="type">Type:</string>
    <string name="description">Description:</string>
    <string name="addTransactionTitle">Add transaction</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="enterDate">Enter transaction date</string>
    <string name="enterMoney">Enter money amount</string>
    <string name="currency">Select currency</string>
    <string name="addDescription">Add description if necessary</string>
    <string name="noTransactionsAvailable">No transaction are set</string>
    <string name="plsAddTransactions">Please, add some transactions to start using all application`s functionality</string>
    <string name="datePattern">%1$s.%2$s.%3$s</string>
    <string name="tempWork">Temporary work</string>
    <string name="salary">Salary</string>
    <string name="business">Business</string>
    <string name="family">Family</string>
    <string name="pprivate">Private</string>
    <!-- Incomes -->
    <string name="incomePattern">+ %s</string>
    <string name="source">Source:</string>
    <string name="income">Income</string>

    <!-- Outgoes -->
    <string name="outgoPattern">- %s</string>
    <string name="outgo">Outgo</string>
    <string name="item">Item:</string>

    <!-- Items -->
    <string name="product">Product: </string>
    <string name="amountOfOutgoes">Outgoes:  </string>
    <string name="amountOfMoney">Money spent: </string>
    <string name="amountOfMoneyPattern">%1$s %2$s</string>
    <string name="percentPattern">%1$s %2$s</string>
    <string name="noItemsAvailable">No items are set</string>
    <string name="addItems">Add items</string>
    <string name="plsAddItems">Please, add some items to start using all application`s functionality</string>
    <string name="addItem">Enter item name</string>

    <!-- Goals -->
    <string name="goal">Goal:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="status">Status:</string>
    <string name="goalValuePattern">%1$s %2$s</string>
    <string name="noGoalsAvailable">No goals are set</string>
    <string name="plsAddGoals">Please, add some goals to start using all application`s functionality</string>
    <string name="addGoal">Add Goal</string>
    <string name="enterStartDate">Enter Goal start date</string>
    <string name="enterEndDate">Enter Goal end date</string>
    <string name="success">Success</string>
    <string name="active">Active</string>
    <string name="failed">Failed</string>

    <!-- PIN screen-->
    <string name="enterPin">Enter PIN</string>
    <string name="setupPin">Set up PIN</string>
    <string name="enterConfirmPin">Confirm your 4-digit PIN</string>
    <string name="enterYourPin">Enter your 4-digit PIN</string>
    <string name="submit">Submit</string>
    <string name="logout">Log out</string>

    <!-- Family-->
    <string name="create">Create</string>
    <string name="createOrJoinFamily">You are not a family member. Please join a family or create a new one.</string>
    <string name="enterFamilyName">Enter family name</string>
    <string name="familyNamePattern">Family "%s"</string>
    <string name="invitations">Invitations</string>
    <string name="leave">Leave</string>
    <string name="familyFounder">Family founder:</string>
    <string name="familyMoney">Family money:</string>
    <string name="invite">Invite</string>
    <string name="inviteFamilyMember">Invite family member by entering his name</string>
    <string name="enterNickname">Enter user`s nickname</string>
    <string name="userNamePattern">%1$s%2$s</string>
    <string name="deleteFamily">Delete Family</string>

    <!-- Family member -->
    <string name="nickName">Nickname: </string>
    <string name="realName">Name: </string>
    <string name="money">Money</string>
    <string name="userInvited">User was successfully invited</string>
    <string name="try_again">Try again</string>
    <!-- Generic errors -->
    <string name="errorUsernameField">Username is invalid.\nIt can contain only characters, digits and "- . _" symbols</string>
    <string name="errorEmailField">Email is invalid.\nPls check your email</string>
    <string name="errorPasswordField">Password is invalid.\nIt should me more than 8 symbols and contain: Uppercase letter, Lowercase letter and digit</string>
    <string name="errorPassesDoNotMatch">Passwords must be equal</string>
    <string name="errorGeneral">Something went wrong… Please try again later…</string>
    <string name="errorFieldIsRequired">Field is required</string>
    <string name="serverNotAvailable">Server is not available</string>
    <string name="incorrectLogin">Incorrect username or password</string>
    <string name="unknownError">Unknown error</string>
    <string name="pinError">PIN is incorrect, PIN need to be 4-digit</string>
    <string name="pinNotMatch">PIN and confirm PIN are not equal</string>
    <string name="pinIncorrect">PIN is incorrect</string>
    <string name="errorApplication">Application error, pls try again later</string>
    <string name="noUserFound">No user with this nickname found</string>
    <string name="sorryDeveloping">Sorry, this screen is currently in developing phase</string>
    <string name="youArentFamilyLeader">You are not family leader to do that</string>
</resources>