<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pinScreenLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:weightSum="1">
    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorTransparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/logout"
        android:padding="12dp"
        android:textColor="@color/colorPrimary"/>

    <ImageView
        android:id="@+id/imagePinLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/considered_costs_logo"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logout"
        app:srcCompat="@drawable/logo_sign" />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/enterPinTitle"
        android:textSize="32sp"
        android:textColor="@color/colorPrimaryText"
        tools:text="Enter PIN"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/imagePinLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <EditText
        android:id="@+id/pinText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:textAlignment="center"
        android:layout_marginStart="42dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="42dp"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:hint="@string/enterYourPin"
        android:background="@drawable/sign_rounded_edit_text_items"
        android:textColor="@color/colorBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterPinTitle" />

    <EditText
        android:id="@+id/pinConfirmText"
        android:layout_width="0dp"
        android:maxLength="4"
        android:layout_height="40dp"
        android:textAlignment="center"
        android:layout_marginStart="42dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="42dp"
        android:inputType="numberPassword"
        android:hint="@string/enterConfirmPin"
        android:background="@drawable/sign_rounded_edit_text_items"
        android:textColor="@color/colorBlue"
        android:imeOptions="actionDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pinText" />

    <Button
        android:id="@+id/submitPinButton"
        android:layout_width="match_parent"
        android:layout_marginTop="24dp"
        android:layout_height="40dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/rounded_white_buttons"
        android:text="@string/submit"
        android:textColor="@color/colorBlue"
        android:textSize="14sp"
        android:layout_gravity="bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pinConfirmText"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>