<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/welcomeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1">


    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45.3dp"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="32dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="15.3sp"
        android:shadowColor="@color/colorPrimaryShadow"
        android:shadowDy="3"
        android:shadowRadius="10"
        android:textColor="@color/colorPrimaryText"
        android:textSize="24.7sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/welcome1Title" />

    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/welcomeImageDescription"
        android:layout_width="185dp"
        android:layout_height="173dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        android:src="@drawable/ic_wallet" />

    <TextView
        android:id="@+id/imageViewText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="32dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="11.3sp"
        android:shadowColor="@color/colorPrimaryShadow"
        android:shadowDy="3"
        android:shadowRadius="10"
        android:textColor="@color/colorPrimaryText"
        android:textSize="18.7sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:text="@string/welcome1Text" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="52dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewText" />



</androidx.constraintlayout.widget.ConstraintLayout>