<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/itemsFragmentLayout"
    android:layout_height="match_parent"
    tools:context=".main.navigation.ItemsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/itemsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/itemsEmptyListLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/emptyListItemPicture"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_empty_list"
            app:layout_constraintBottom_toTopOf="@id/emptyListItemTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/emptyListItemTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginEnd="42dp"
            android:text="@string/noItemsAvailable"
            android:textAlignment="center"
            android:textColor="@color/colorBlue"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emptyListItemPicture" />

        <TextView
            android:id="@+id/emptyListItemText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="42dp"
            android:text="@string/plsAddItems"
            android:textAlignment="center"
            android:textColor="@color/colorBlue"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emptyListItemTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

<androidx.cardview.widget.CardView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginBottom="10dp"
    android:layout_gravity="bottom|start"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">
    <EditText
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:textColor="@color/colorBlue"
        android:id="@+id/itemEditText"
        android:background="@drawable/sign_rounded_edit_text_items"
        android:textColorHint="@color/colorBlue"
        android:hint="@string/addItem"
        android:imeOptions="actionDone"
        android:inputType="text"/>
</androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/itemsAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="10dp"
        android:src="@drawable/ic_add" />

</FrameLayout>